Attempt to fix wide calendar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ button {
   border: 1px solid black;
   text-align: center;
   font-family: monospace;
+  font-size: 1rem;
 }
 
 .favourite-team {
